module(
    name = "prometheus-cpp",
    version = "1.3.0",
    repo_name = "com_github_jupp0r_prometheus_cpp",
)

bazel_dep(name = "boringssl", version = "0.0.0-20240530-2db0eb3")
bazel_dep(name = "civetweb", version = "1.16")
bazel_dep(name = "curl", version = "8.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "zlib", version = "1.3.1")

bazel_dep(name = "google_benchmark", version = "1.8.3", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.12.1", dev_dependency = True)
