module(
    name = "prometheus-cpp",
    version = "1.3.0",
    repo_name = "com_github_jupp0r_prometheus_cpp",
)

bazel_dep(name = "boringssl", version = "0.20260616.0")
bazel_dep(name = "civetweb", version = "1.16.bcr.4")
bazel_dep(name = "curl", version = "8.12.0.bcr.1")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "zlib", version = "1.3.2")

bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.8.0", dev_dependency = True)
