cc_library(
    name = "core",
    srcs = glob([
        "src/**/*.cc",
        "src/**/*.h",
    ]),
    hdrs = glob(
        ["include/**/*.h"],
    ),
    local_defines = [
        "PROMETHEUS_CPP_COMPILE_CORE",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
