cc_library(
    name = "pull",
    srcs = glob([
        "src/**/*.cc",
        "src/**/*.h",
    ]),
    hdrs = glob(
        ["include/**/*.h"],
    ),
    local_defines = [
        "HAVE_ZLIB",
        "PROMETHEUS_CPP_COMPILE_PULL",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "@civetweb",
        "@net_zlib_zlib//:z",
    ],
)
