cc_library(
    name = "push",
    srcs = glob([
        "src/**/*.cc",
        "src/**/*.h",
    ]),
    hdrs = glob(
        ["include/**/*.h"],
    ),
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "@com_github_curl//:curl",
    ],
)
