cc_library(
    name = "push",
    srcs = glob([
        "src/**/*.cc",
        "src/**/*.h",
    ]),
    hdrs = glob(
        ["include/**/*.h"],
    ),
    copts = [
        "-DPROMETHEUS_CPP_COMPILE_PUSH",
    ],
    linkopts = select({
        "//:windows": [],
        "//:windows_msvc": [],
        "//conditions:default": ["-lpthread"],
    }),
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "@com_github_curl//:curl",
    ],
)
