cc_library(
    name = "push",
    srcs = glob([
        "src/**/*.cc",
        "src/**/*.h",
    ]),
    hdrs = glob(
        ["include/**/*.h"],
    ),
    linkopts = select({
        "//:windows": [],
        "//:windows_msvc": [],
        "//conditions:default": ["-lpthread"],
    }),
    local_defines = [
        "PROMETHEUS_CPP_COMPILE_PUSH",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "@com_github_curl//:curl",
    ],
)
